--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
         <a class="header__link" href="#">Узнать &rarr;</a>
       </p>
-      <img src="./images/header-image.png" alt="Картина 'Опять двойка'" class="header__main-illustration">
+      <img src="./images/header-image.png" alt="Грустный мальчик смотрит в пол." class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
     </header>
 
@@ -40,7 +40,7 @@
         </article>
       </section>
 
-      <section class="techniques page__techniques">
+      <section class="techniques content__techniques">
         <h2 class="section-title techniques__section-title">Техники обучения</h2>
         <p class="section-subtitle techniques__section-subtitle">Пять практик от Барбары Оакли</p>
         
@@ -79,7 +79,7 @@
 
       <section class="video">
         <h2 class="section-title video__section-title">Видео на TED</h2>
-        <h2 class="section-subtitle video__section-subtitle">Для тех, кто любит прокрастинировать</h2>
+        <p class="section-subtitle video__section-subtitle">Для тех, кто любит прокрастинировать</p>
 
         <div class="video__iframes">
           <iframe class="video__iframe" 
@@ -116,7 +116,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" target="_blank" class="feynman__link">Подробнее &rarr;</a>
+        <a href="#" target="_blank" rel="nofollow noreferrer" class="feynman__link">Подробнее &rarr;</a>
         <img class="feynman__image" src="./images/feynman.png" alt="Фейнман">
       </section>
 
@@ -172,7 +172,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги">
-            <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+            <a class="khan__buy-link" target="_blank" rel="nofollow noreferrer" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -180,7 +180,7 @@
       <section class="kaufman">
         <h2 class="section-title kaufman__section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle kaufman__section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <img class="kaufman__triangle rotation" src="./images/kaufman-triangle.svg" alt="треугольник Кауфмана">
+        <div class="kaufman__triangle rotation"></div>
         <ul class="table kaufman__table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -230,10 +230,18 @@
         <p class="section-subtitle resources__section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
         <div class="resources__logo-zone">
-          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип"></a>
-          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип"></a>
-          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="логотип"></a>
-          <a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="логотип"></a>
+          <a class="resources__link" target="_blank" rel="nofollow noreferrer" href="#">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
+          </a>
+          <a class="resources__link" target="_blank" rel="nofollow noreferrer" href="#">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Н + 1">
+          </a>
+          <a class="resources__link" target="_blank" rel="nofollow noreferrer" href="#">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка">
+          </a>
+          <a class="resources__link" target="_blank" rel="nofollow noreferrer" href="#">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
+          </a>
         </div>
 
       </section>
@@ -248,7 +256,7 @@
         </div>
 
         <div class="footer__column footer__column_content_info">
-          <h3 class="footer__column-heading">О Практикуме</h3>
+          <h2 class="footer__column-heading">О Практикуме</h2>
           <nav>
             <ul class="footer__column-links">
               <li class="footer__column-item"><a href="#" class="footer__column-link">Главная</a></li>
@@ -259,18 +267,23 @@
         </div>
         
         <div class="footer__column footer__column_content_social">
-          <h3 class="footer__column-heading">Соцсети</h3>
-          <ul class="footer__column-links">
-            <li class="footer__column-item">
-              <a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="логотип ютюба" class="footer__social-icon">YouTube</a>
-            </li>
-            <li class="footer__column-item">
-              <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="логотип вконтакте" class="footer__social-icon">ВКонтакте</a>
-            </li>
-            <li class="footer__column-item">
-              <a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="логотип тиктока" class="footer__social-icon">TikTok</a>
-            </li>
-          </ul>
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <nav>
+            <ul class="footer__column-links">
+              <li class="footer__column-item">
+                <a href="#" target="_blank" rel="nofollow noreferrer" class="footer__column-link">
+                  <img src="./images/youtube-icon.svg" alt="логотип ютюба" class="footer__social-icon">YouTube</a>
+              </li>
+              <li class="footer__column-item">
+                <a href="#" target="_blank" rel="nofollow noreferrer" class="footer__column-link">
+                  <img src="./images/vk_color_white.svg" alt="логотип вконтакте" class="footer__social-icon">ВКонтакте</a>
+              </li>
+              <li class="footer__column-item">
+                <a href="#" target="_blank" rel="nofollow noreferrer" class="footer__column-link">
+                  <img src="./images/tiktok-icon.svg" alt="логотип тиктока" class="footer__social-icon">TikTok</a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
     </footer>
